fix: remove bug (first row not fully visible)
- remove bug that causes first row to be "cut" by overflow-y scrollbar.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -616,6 +616,7 @@ section > div {
 }
 
 .products {
+  margin-top: 56rem; /* ! BUG: padding is ignored by scroll, so to make elements fully visible, it has to have own margin-top */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   row-gap: 3.5rem;
